--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ body{
     overflow: hidden;
 }
 
-.lowLip::before{
+/* .lowLip::before{
 	width: 100px;
     height: 100px;
     content: '';
@@ -156,7 +156,7 @@ body{
     margin-left: -48px;
     bottom: -6px;
     z-index: -2;
-}
+} */
 
 /*
 .lowLip{
